# fbthrift-test

./: CMakeLists.txt  Example.thrift  README.md  build.sh  check_deps.sh  generate.sh
client/: client.cpp
gen-cpp2/: Example_constants.cpp  Example_constants.h  Example_data.cpp  Example_data.h  Example_for_each_field.h  Example_metadata.cpp  Example_metadata.h  Example_types.cpp  Example_types.h  Example_types.tcc  Example_types_custom_protocol.h  Example_visit_by_thrift_field_metadata.h  Example_visit_union.h  Example_visitation.h  KarolService.cpp  KarolService.h  KarolService.tcc  KarolServiceAsyncClient.cpp  KarolServiceAsyncClient.h  KarolService_custom_protocol.h  KarolService_processmap_binary.cpp  KarolService_processmap_compact.cpp
server/: KarolService.cpp  KarolService.h  server.cpp
